[gd_scene load_steps=3 format=3 uid="uid://b38dmw6n6tcqv"]

[ext_resource type="Theme" uid="uid://bm3863jt2yyup" path="res://themes/menu_theme.tres" id="1"]
[ext_resource type="Script" path="res://menu/pause_menu/pause_menu.gd" id="2"]

[node name="pause_menu" type="Popup"]
process_mode = 2
visible = true
exclusive = true
theme = ExtResource("1")
script = ExtResource("2")

[node name="background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.705882)

[node name="resume_button" type="Button" parent="background"]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.4
text = "Resume"
flat = true

[node name="options_button" type="Button" parent="background"]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.5
text = "Options"
flat = true

[node name="title-screen_button" type="Button" parent="background"]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.6
text = "Title Screen"
flat = true

[node name="quit_button" type="Button" parent="background"]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.7
text = "Quit"
flat = true

[connection signal="pressed" from="background/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="background/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="background/title-screen_button" to="." method="_on_titlescreen_button_pressed"]
[connection signal="pressed" from="background/quit_button" to="." method="_on_quit_button_pressed"]
